fix scrollbar hover color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,7 +44,7 @@
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #c5cbde;
 }
 
 body {
